# sir-goot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clean.sh  configure  make  run  todo.md
data/gigi/: config.gigi  map1.gigi  map2.gigi
data/jakob/: config.gigi  map1.gigi  map2.gigi  map3.gigi
data/johan/: config.gigi  forest.gigi  house.gigi
src/: aux.c  aux.h  data.c  data.h  game_logic.c  game_logic.h  log.c  log.h  main.c  parser.c  parser.h  render.c  render.h
src/parsing/: aux.c  aux.h  loading.c  loading.h  parser.c  parser.h
src/render/: effects.c  effects.h  movements.h  owl.txt  screen.c  screen.h
